--- a/listas-tabela.html
+++ b/listas-tabela.html
@@ -31,6 +31,40 @@
 <td>R$30</td>
 </tr>
 </table>
-
+  <h1>Tabela com Cabeçalho e Rodapé</h1>
+  <table width="100%" border="1">
+    <thead>
+      <tr>
+        <th>Mês</th>
+        <th>Horas/Aula</th>
+      </tr>
+<tbody> 
+  <tr>
+  <td>Junho</td>
+  <td>50</td>
+</tr>
+</tbody>
+<tfoot>
+  <tr>
+    <th>Total</th>
+    <th>100</th>
+  </tr>
+</tfoot>
+  </table>
+  <h1>Tabela com linhas e colunas expandidas - Colspan </h1>
+  <table width="100%" border="1"> 
+    <tr>
+    <td>Aluno</td>
+      <td colspan="2">Disciplina</td>
+    </tr>
+    <tr>
+      <td>Alex</td>
+      <td>HTML</td>
+      <td>Ambiente WEB</td>
+    </tr>
+  </table>
+  <h1>Tabela com linhas e colunas expandidas - Rowspan</h1>
+  
 </body>
+
 </html>
