Enhance listas-tabela.html with additional tables
Added tables with header, footer, colspan, and rowspan examples.

--- a/listas-tabela.html
+++ b/listas-tabela.html
@@ -64,7 +64,18 @@
     </tr>
   </table>
   <h1>Tabela com linhas e colunas expandidas - Rowspan</h1>
-  
+  <table width="100%" border="1">
+    <tr>
+      <td>Aluno</td>
+      <td rowspan="2">Disciplina<td/>
+    </tr>
+    <tr>
+      <td>Alex</td>
+      <td>HTML</td>
+      <td>Ambiente WEB</td>
+    </tr>
+  </table>
 </body>
 
 </html>
+
